--- a/Resources/configs/main_config.json
+++ b/Resources/configs/main_config.json
@@ -1,9 +1,9 @@
 {
 	"startup_settings" : {
-		"is_full_screen" : false,
+		"is_full_screen" : true,
 		"screen_size" : {
 			"height" : 720,
-			"width" : 1280
+			"width" : 1024
 		},
 		"sprites_size" : {
 			"height" : 2160,
